--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.90.12",
     "@telegram-apps/sdk": "^3.11.8",
     "@web3modal/wagmi": "^5.1.11",
+    "axios": "^1.13.2",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
