--- a/cedra-quest-backend/package.json
+++ b/cedra-quest-backend/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "Backend API for Cedra Quest Telegram Mini App",
   "main": "dist/main.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "build": "prisma generate && nest build",
     "postinstall": "prisma generate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node dist/main",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
