--- a/cedra-quest-backend/package.json
+++ b/cedra-quest-backend/package.json
@@ -8,9 +8,9 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "build": "prisma generate && nest build",
-    "vercel-build": "prisma generate && nest build",
-    "postinstall": "prisma generate",
+    "build": "nest build",
+    "vercel-build": "npx prisma generate && nest build",
+    "postinstall": "",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main.js",
     "start:dev": "nest start --watch",
