--- a/cedra-quest-backend/docker-compose.yml
+++ b/cedra-quest-backend/docker-compose.yml
@@ -21,9 +21,9 @@ services:
   postgres:
     image: postgres:15-alpine
     environment:
-      POSTGRES_DB: cedra_quest_prod
-      POSTGRES_USER: cedra_user
-      POSTGRES_PASSWORD: secure_password_change_this
+      POSTGRES_DB: ${POSTGRES_DB:-cedra_quest_prod}
+      POSTGRES_USER: ${POSTGRES_USER:-cedra_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -35,7 +35,7 @@ services:
   # Redis for caching
   redis:
     image: redis:7-alpine
-    command: redis-server --requirepass your_redis_password
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     ports:
       - "6379:6379"
     volumes:
