--- a/cedra-quest-backend/.env.production
+++ b/cedra-quest-backend/.env.production
@@ -5,7 +5,7 @@ NODE_ENV=production
 PORT=3333
 
 # Database - Supabase Production
-DATABASE_URL="postgresql://postgres.izmaaobnmpferzghwjvw:thaiphat1022001@aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+DATABASE_URL="postgresql://postgres.izmaaobnmpferzghwjvw:thaiphat1022001@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres"
 DIRECT_URL="postgresql://postgres.izmaaobnmpferzghwjvw:thaiphat1022001@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres"
 
 # JWT
